# mantle-v2

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .golangci.yaml  .semgrepignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TEST.md  codecov.yml  datalayr  deny.toml  docker-bake.hcl  go.mod  go.sum  go.work  go.work.sum  justfile  mise.toml  package.json  rust-toolchain.toml  rustfmt.toml  typos.toml
alloy-op-evm/: Cargo.toml  release.toml
alloy-op-evm/src/: env.rs  error.rs  lib.rs  tx.rs
alloy-op-evm/src/block/: mod.rs  receipt_builder.rs
alloy-op-evm/src/post_exec/: inspector.rs  mod.rs
kona/crates/batcher/comp/: Cargo.toml  README.md
kona/crates/batcher/comp/examples/: batch_to_frames.rs
kona/crates/batcher/comp/src/: brotli.rs  channel_out.rs  lib.rs  mod.rs  test_utils.rs  traits.rs  variant.rs
kona/crates/proof/driver/: Cargo.toml
kona/crates/proof/driver/src/: cursor.rs  executor.rs  lib.rs  tip.rs
kona/crates/proof/executor/: Cargo.toml  README.md
kona/crates/proof/executor/src/: lib.rs  test_utils.rs  util.rs
kona/crates/proof/proof-interop/: Cargo.toml
kona/crates/proof/proof-interop/src/: boot.rs  consolidation.rs  hint.rs  lib.rs  provider.rs
kona/crates/proof/proof-interop/testdata/: eip2935_header_by_number.json
kona/crates/protocol/hardforks/: Cargo.toml  build.rs
kona/crates/protocol/hardforks/src/: forks.rs  interop.rs  jovian.rs  karst.rs  lib.rs  nut_bundle.rs
kona/crates/supervisor/core/: Cargo.toml
kona/crates/supervisor/core/src/: error.rs  lib.rs  supervisor.rs
kona/crates/supervisor/metrics/: Cargo.toml
kona/crates/supervisor/metrics/src/: lib.rs  macros.rs  reporter.rs
kona/crates/supervisor/rpc/: Cargo.toml  README.md
kona/crates/supervisor/rpc/src/: config.rs  jsonrpsee.rs  lib.rs  reqwest.rs  response.rs  server.rs
kona/crates/supervisor/service/: Cargo.toml
kona/crates/supervisor/service/src/: lib.rs  service.rs
kona/crates/supervisor/storage/: Cargo.toml
kona/crates/supervisor/storage/src/: chaindb.rs  chaindb_factory.rs  error.rs  lib.rs  metrics.rs  traits.rs
kona/crates/supervisor/types/: Cargo.toml  README.md
kona/crates/supervisor/types/src/: access_list.rs  head.rs  hex_string_u64.rs  lib.rs  log.rs  message.rs  receipt.rs  types.rs
kona/crates/utilities/serde/: Cargo.toml  README.md
kona/crates/utilities/serde/src/: lib.rs  quantity.rs
kona/examples/execution-fixture/: Cargo.toml
op-alloy/crates/consensus/: Cargo.toml  README.md
op-alloy/crates/consensus/src/: eip1559.rs  interop.rs  lib.rs  post_exec.rs  reth_codec.rs  reth_core.rs  sdm.rs  source.rs
op-alloy/crates/consensus/src/nuts/: mod.rs
op-alloy/crates/consensus/src/receipts/: deposit.rs  envelope.rs  receipt.rs
op-alloy/crates/consensus/src/transaction/: envelope.rs  tx_type.rs  typed.rs
op-alloy/crates/network/: Cargo.toml
op-alloy/crates/network/src/: lib.rs
op-alloy/crates/op-alloy/: Cargo.toml  README.md
op-alloy/crates/rpc-jsonrpsee/: Cargo.toml  README.md
rust/: Cargo.toml  MANTLE_CHANGES.md  clippy.toml  deny.toml  package-lock.json  typos.toml
rust/alloy-op-evm/: Cargo.toml
rust/alloy-op-evm/src/: env.rs  lib.rs  tx.rs
rust/alloy-op-evm/src/block/: canyon.rs  mod.rs  tests.rs
rust/alloy-op-evm/src/post_exec/: mod.rs
rust/alloy-op-evm/src/post_exec/inspector/: tests.rs
rust/alloy-op-hardforks/: Cargo.toml
rust/alloy-op-hardforks/src/: lib.rs
rust/alloy-op-hardforks/src/mantle/: mainnet.rs  mod.rs  sepolia.rs
rust/kona/: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASES.md  SECURITY.md  justfile  lychee.toml  release.toml
rust/kona/.config/: zepter.yaml
rust/kona/crates/node/engine/: Cargo.toml
rust/kona/crates/node/rpc/: Cargo.toml
rust/kona/crates/node/service/: Cargo.toml
rust/kona/crates/node/sources/: Cargo.toml  README.md
rust/kona/crates/proof/driver/: Cargo.toml
rust/kona/crates/proof/executor/: Cargo.toml
rust/kona/crates/proof/mpt/: CHANGELOG.md  Cargo.toml
rust/kona/crates/proof/preimage/: Cargo.toml
rust/kona/crates/proof/proof/: Cargo.toml
rust/kona/crates/proof/proof-interop/: README.md
rust/kona/crates/proof/std-fpvm/: Cargo.toml
rust/kona/crates/proof/std-fpvm-proc/: Cargo.toml
rust/kona/crates/protocol/derive/: README.md
rust/kona/crates/protocol/genesis/: README.md
rust/kona/crates/protocol/hardforks/: README.md  build_helpers.rs
rust/kona/crates/protocol/interop/: Cargo.toml  README.md
rust/kona/crates/protocol/protocol/: Cargo.toml  README.md
rust/kona/crates/protocol/registry/: README.md  build.rs
rust/kona/docker/: README.md
rust/kona/docker/apps/: README.md  entrypoint.sh  justfile  kona_app_generic.dockerfile
rust/kona/docker/cannon/: cannon.dockerfile  mips64-unknown-none.json
rust/kona/docker/fpvm-prestates/: cannon-repro.dockerfile  justfile
rust/kona/examples/discovery/: Cargo.toml
rust/kona/examples/gossip/: Cargo.toml
rust/kona/tests/: README.md  justfile
rust/op-alloy/: README.md
rust/op-alloy/crates/consensus/: Cargo.toml
rust/op-alloy/crates/network/: README.md
rust/op-alloy/crates/op-alloy/: Cargo.toml  README.md
rust/op-alloy/crates/provider/: Cargo.toml  README.md
rust/op-alloy/crates/rpc-types/: Cargo.toml  README.md
rust/op-alloy/crates/rpc-types-engine/: Cargo.toml
rust/op-reth/: DockerfileOp  Makefile  README.md  justfile
rust/op-reth/crates/cli/: Cargo.toml
rust/op-reth/crates/exex/: README.md
rust/op-reth/crates/flashblocks/: Cargo.toml
rust/op-reth/crates/hardforks/: Cargo.toml
rust/op-reth/crates/payload/: Cargo.toml
rust/op-reth/crates/primitives/: Cargo.toml
rust/op-reth/crates/reth/: Cargo.toml
rust/op-reth/crates/rpc/: Cargo.toml
rust/op-reth/crates/storage/: Cargo.toml
rust/op-reth/crates/tests/: Makefile
rust/op-reth/crates/txpool/: Cargo.toml
rust/op-reth/examples/custom-node/: Cargo.toml
rust/op-reth/tests/: justfile
rust/op-revm/src/: evm.rs  fast_lz.rs  handler.rs  l1block.rs  precompiles.rs  spec.rs
rust/op-revm/src/transaction/: abstraction.rs  deposit.rs
(+4777 files in other folders)
