[package]
name = "op-alloy-network"
description = "Optimism blockchain RPC behavior abstraction"

version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Alloy Contributors"]
license.workspace = true
homepage = "https://github.com/ethereum-optimism/optimism"
repository = "https://github.com/ethereum-optimism/optimism"
exclude = ["benches/", "tests/"]

[lints]
workspace = true

[dependencies]
# Workspace
op-alloy-consensus = { workspace = true, features = ["alloy-compat"] }
op-alloy-rpc-types = { workspace = true, features = ["std"] }

# Alloy
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true

[features]
std = [
	"op-alloy-consensus/std",
	"op-alloy-rpc-types/std",
	"alloy-consensus/std",
	"alloy-rpc-types-eth/std"
]
serde = [
	"op-alloy-consensus/serde",
	"op-alloy-rpc-types/serde",
	"alloy-consensus/serde",
	"alloy-rpc-types-eth/serde"
]
